--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,7 @@
 body {
     
     font-family: Arial;
-    /* background-color: #f6f8f9; */
-    background-color: black;
+    background-color: #f6f8f9;
 }
 
 /****** 
@@ -149,18 +148,20 @@ header{
     margin-bottom: 40px;
 }
 
+header div {
+
+    display: inline-block;
+    padding: 10px 20px;
+}
 
 #logo {
 
-    display: inline-block;
     width: 50px;
     height: 50px;
-    margin: 10px 20px;
 }
 
 #title {
 
-    display: inline-block;
     font-size: 40px;
     font-weight: bold;
 }
